css/parser/tests/errors/strings/eof-single-quotes/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/strings/eof-single-quotes/input.css:2:16
  |
2 |   prop: 'string
  |                ^

